fixed interface result set Table(selection row)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -128,6 +128,7 @@ results.table.cell.null.background.colour=-5390348
 results.table.cell.null.adding.background.colour=-5390348
 results.table.cell.null.deleting.background.colour=-5390348
 results.alternating.row.background=-1314561
+results.table.focus.row.background.colour=-16719891
 results.table.clob.length=100
 results.table.double-click.record.dialog=true
 results.table.use.form.adding.deleting=false
