--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -143,7 +143,9 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.5.3</version>
+            <version>3.5.6-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/../../lib/liquibase-3.5.6-SNAPSHOT.jar</systemPath>
         </dependency>
 
         <dependency>
