--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -253,6 +253,7 @@
                                     <includes>
                                         <!--include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include-->
                                         <include>**/fbplugin.jar</include>
+                                        <include>**/liquibase-3.5.6-SNAPSHOT.jar</include>
                                     </includes>
                                 </resource>
                             </resources>
