added going to object from query editor

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -34,6 +34,7 @@ sqlsyntax.colour.normal=-16777216
 sqlsyntax.colour.number=-6750157
 sqlsyntax.colour.literal=-13421671
 sqlsyntax.colour.braces=-16764058
+sqlsyntax.colour.dbobjects=-16738012
 sqlsyntax.colour.braces.match1=-256
 sqlsyntax.colour.braces.match2=-256
 sqlsyntax.colour.braces.error=-65536
@@ -49,6 +50,7 @@ sqlsyntax.style.number=0
 sqlsyntax.style.braces=0
 sqlsyntax.style.literal=0
 sqlsyntax.style.operator=0
+sqlsyntax.style.dbobjects=0
 sqlsyntax.style.braces.match1=0
 sqlsyntax.style.braces.match2=0
 sqlsyntax.style.braces.error=0
