loading records as needed(fetch size = 30)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -139,6 +139,7 @@ results.table.row.select=true
 results.table.row.numbers=false
 results.table.single.row.transpose=false
 results.table.right.align.numeric=true
+results.table.fetch.size=30
 # ----------------------------
 # System View Options
 # ----------------------------
