--- a/modules/plugins/fbplugin/pom.xml
+++ b/modules/plugins/fbplugin/pom.xml
@@ -4,6 +4,14 @@
   <!--groupId>biz.redsoft</groupId-->
   <artifactId>fbplugin</artifactId>
   <version>1.0</version>
+  <dependencies>
+    <dependency>
+      <groupId>javax.resource</groupId>
+      <artifactId>connector-api</artifactId>
+      <version>1.5</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
   <packaging>jar</packaging>
 
   <parent>
