--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<module>modules/plugins/fbplugin</module>
         <module>modules/plugins/fbplugin-impl</module>
         <module>modules/plugins/jdbc-logger</module>
+        <module>modules/plugins/sql-parser</module>
+        <module>modules/plugins/trace_parser</module>
         <module>modules/redexpert</module>
     </modules>
 </project>
