--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,8 @@ prepare_release:
 source_package:
   stage: source_package
   image: maven:3-jdk-8-alpine
+  variables:
+    MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2"
   before_script:
     - apk --update add bash git
     - git config --global user.name "Dummy Name"
