--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ variables:
     - m4 -DVERSION=${VERSION} ci/artifacts.m4 > .ci/artifacts
     - echo ${VERSION} > .ci/version
     - echo ${BRANCH} > .ci/branch
+    - echo ${CONTEXT} > .ci/context
   artifacts:
     expire_in: 1 day
     paths:
@@ -31,9 +32,10 @@ prepare_snapshot:
   before_script:
     - mkdir .ci
     - VERSION=$(awk -F= '{if ($1 == "re.version") printf("%s", $2)}' src/org/executequery/eq.system.properties|sed 's/\(.*\)-.*/\1/')
-    - export BUILDNO=$(relmanager_client genbuildno ${RELEASE_HUB_PROJECT} ${VERSION}-SNAPSHOT)
+    - BUILDNO=$(relmanager_client genbuildno ${RELEASE_HUB_PROJECT} ${VERSION}-SNAPSHOT)
     - export VERSION=${VERSION}-SNAPSHOT.${BUILDNO}
     - export BRANCH=${CI_COMMIT_REF_NAME}
+    - export CONTEXT=commit
   except:
     - tags
 
@@ -44,6 +46,7 @@ prepare_release:
     - mkdir .ci
     - export VERSION=$(echo ${CI_COMMIT_TAG}|sed 's/v//')
     - export BRANCH=${TAG_BRANCH}
+    - export CONTEXT=tag
   only:
     - tags
 
@@ -64,17 +67,42 @@ source_package:
     paths:
       - dist-src/
 
-deploy:
-  stage: deploy
-  image: redsoftru/relmanager_client
+build_linux_x86_64:
+  stage: build
+  image: redsoftru/rdbbuildenv-lsbsdk-centos:centos6-lsb4.1.0
+  before_script:
+    - mkdir dist/linux-x86_64
+    - tar xf dist-src/RedExpert-$VERSION.tar.gz
+    - yum install -y java-1.8.0-openjdk-devel-1.8.0.181 qt-devel gtk2-devel-2.24.23
+    - cd /opt
+    - wget http://www.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
+    - tar xzf apache-maven-3.5.4-bin.tar.gz
+    - export M2_HOME=/opt/apache-maven-3.5.4/
+    - export PATH=${M2_HOME}/bin:${PATH}
+    - export QMAKE=qmake-qt4
+    - export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.i386/
+    - export VERSION=`cat .ci/version`
   script:
-    - VERSION=$(cat .ci/version)
-    - BRANCH=$(cat .ci/branch)
-    - echo $BRANCH $VERSION
-    - cat .ci/artifacts
-    - find dist-src
-    - find dist-bin
-    - relmanager_client deploy ${RELEASE_HUB_PROJECT} ${VERSION} --artifacts .ci/artifacts --ci_url ${CI_URL} --context ${CONTEXT} --branch ${BRANCH} --commit ${CI_COMMIT_SHA}
-  only:
-    variables:
-      - "$RELEASE_HUB_KEY"
+    - cd RedExpert-$VERSION
+    - ./ci/build_native.sh
+    - ./ci/build_jars.sh
+    - mv /modules/redexpert/target/RedExpert-$VERSION.* ../dist/linux-x86_64
+  artifacts:
+    expire_in: 1 day
+    paths:
+      - dist/
+
+# deploy:
+#   stage: deploy
+#   image: redsoftru/relmanager_client
+#   script:
+#     - VERSION=$(cat .ci/version)
+#     - BRANCH=$(cat .ci/branch)
+#     - echo $BRANCH $VERSION
+#     - cat .ci/artifacts
+#     - find dist-src
+#     - find dist-bin
+#     - relmanager_client deploy ${RELEASE_HUB_PROJECT} ${VERSION} --artifacts .ci/artifacts --ci_url ${CI_URL} --context ${CONTEXT} --branch ${BRANCH} --commit ${CI_COMMIT_SHA}
+#   only:
+#     variables:
+#       - "$RELEASE_HUB_KEY"
