--- a/modules/plugins/fbplugin/pom.xml
+++ b/modules/plugins/fbplugin/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
-    <version>4.3</version>
+    <version>2.0.0-SNAPSHOT</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
