--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -14,8 +14,8 @@
     <parent>
         <groupId>org.executequery</groupId>
         <artifactId>RedExpert-parent</artifactId>
-        <version>4.3</version>
         <relativePath>../../pom.xml</relativePath>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
