Update liquibase to avoid using version from git

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -142,9 +142,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.5.6-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${pom.basedir}/../../lib/liquibase-3.5.6-SNAPSHOT.jar</systemPath>
+            <version>3.6.2</version>
         </dependency>
 
         <dependency>
@@ -251,7 +249,6 @@
                                     <directory>${pom.basedir}/../../lib</directory>
                                     <includes>
                                         <include>**/fbplugin.jar</include>
-                                        <include>**/liquibase-3.5.6-SNAPSHOT.jar</include>
                                     </includes>
                                 </resource>
                             </resources>
