--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,6 +84,8 @@ build_linux_x86_64:
     - wget http://www.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
     - tar xzf apache-maven-3.5.4-bin.tar.gz
   script:
+    - pwd
+    - find
     - tar xf dist-src/RedExpert-$VERSION-src.tar.gz
     - cd RedExpert-$VERSION
     - ./ci/build_native.sh
