--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ build_linux_x86_64:
   script:
     - cd RedExpert-$VERSION
     - ./ci/build_native.sh
-    - ./ci/build_jars.sh
+    - ./ci/build_jar.sh
     - mv /modules/redexpert/target/RedExpert-$VERSION.* ../dist/linux-x86_64
   artifacts:
     expire_in: 1 day
