--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -15,6 +15,10 @@
 
   <repositories>
     <repository>
+      <id>maven-central</id>
+      <url>http://repo1.maven.org/maven2</url>
+    </repository>
+    <repository>
       <id>red-database</id>
       <name>red-database</name>
       <url>http://artifactory.red-soft.biz/red-database</url>
