--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -352,6 +352,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgument>-XDignore.symbol.file</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
