--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,9 +78,17 @@ source_package:
   <<: *build_template
   variables: &build_linux_template_variables
     MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2"
+    M2_HOME: /opt/apache-maven-3.5.4/
+    QMAKE: qmake-qt4
+  before_script:
+    - yum install -y java-1.8.0-openjdk-devel-1.8.0.181 qt-devel gtk2-devel-2.24.23
+    - cd /opt
+    - wget http://www.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
+    - tar xzf apache-maven-3.5.4-bin.tar.gz
+    - export PATH=${M2_HOME}/bin:${PATH}
+    - export VERSION=`cat .ci/version`
   script:
     - cd "${CI_PROJECT_DIR}"
-    - export VERSION=`cat .ci/version`
     - tar xf dist-src/RedExpert-$VERSION-src.tar.gz
     - cd RedExpert-$VERSION
     - ./ci/build_native.sh
@@ -93,16 +101,16 @@ build_linux_x86_64:
   image: redsoftru/rdbbuildenv-lsbsdk-centos:centos6-lsb4.1.0
   variables:
     DIST: ${CI_PROJECT_DIR}/dist/linux-x86_64
+    JAVA_HOME: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.x86_64/
     <<: *build_linux_template_variables
-  before_script:
-    - yum install -y java-1.8.0-openjdk-devel-1.8.0.181 qt-devel gtk2-devel-2.24.23
-    - export M2_HOME=/opt/apache-maven-3.5.4/
-    - export PATH=${M2_HOME}/bin:${PATH}
-    - export QMAKE=qmake-qt4
-    - export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.x86_64/
-    - cd /opt
-    - wget http://www.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
-    - tar xzf apache-maven-3.5.4-bin.tar.gz
+
+build_linux_x86:
+  <<: *build_linux_template
+  image: redsoftru/rdbbuildenv-lsbsdk-centos:centos6-i386-lsb4.1.0
+  variables:
+    DIST: ${CI_PROJECT_DIR}/dist/linux-x86
+    JAVA_HOME: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.i386/
+    <<: *build_linux_template_variables
 
 # deploy:
 #   stage: deploy
