Fix path to native binary

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -318,7 +318,7 @@
                             <outputDirectory>${basedir}/target/bin</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${pom.basedir}/../../native/bin</directory>       
+                                    <directory>${pom.basedir}/../../native/RedExpertNativeLauncher/bin</directory>
                                 </resource>
                             </resources>
                         </configuration>
