--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,41 @@ build:linux:x86:
     JAVA_HOME: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.i386/
     <<: *build_linux_template_variables
 
+.build_windows_template: &build_windows_template
+  tags:
+    - windows
+    - builder
+  variables: &build_windows_template_vars
+    ErrorActionPreference: STOP
+    JAVA_HOME: c:\Program Files\Java\jdk8
+  before_script:
+    - $VERSION = (get-content .ci\version -Raw).trim()
+    - unzip -q dist-src\RedExpert-$VERSION-src.zip
+    - mkdir ${DIST}
+  script:
+    - cd ${CI_PROJECT_DIR}\RedExpert-$VERSION
+    - powershell -ExecutionPolicy ByPass -file ci\build_native.ps1
+    - powershell -ExecutionPolicy ByPass -file ci\build_jar.ps1
+    - mv modules/redexpert/target/RedExpert-$VERSION.* "${DIST}"
+
+build:windows:x86_64:
+  <<: *build_template
+  <<: *build_windows_template
+  variables:
+    DIST: ${CI_PROJECT_DIR}\dist\windows-x86_64
+    QMAKE: c:\Qt\Qt5.6.3\5.6.3\msvc2013_64\bin\qmake.exe
+    ARCH: amd64
+    <<: *build_windows_template_vars
+
+build:windows:x86:
+  <<: *build_template
+  <<: *build_windows_template
+  variables:
+    DIST: ${CI_PROJECT_DIR}\dist\windows-x86
+    QMAKE: c:\Qt\Qt5.6.3_x86\5.6.3\msvc2013\bin\qmake.exe
+    ARCH: x86
+    <<: *build_windows_template_vars
+
 repackage:
   tags:
     - docker
@@ -132,7 +167,7 @@ repackage:
     - apk --update add bash tar zip
     - export VERSION=`cat .ci/version`
   script:
-    - ./ci/repackage.sh linux-x86_64 linux-x86
+    - ./ci/repackage.sh linux-x86_64 linux-x86 windows-x86_64 windows-x86
   artifacts:
     expire_in: 1 day
     paths:
