--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ prepare:release:
     - mkdir .ci
     - VERSION_IN_PROPERTIES=`cat src/org/executequery/eq.system.properties|awk -F= '{if ($1 == "re.version") print($2)}'`
     - export VERSION=$(echo ${CI_COMMIT_TAG}|sed 's/v//')
-    - "[ \"$VERSION\" = \"$VERSION_IN_PROPERTIES\" ] || (Update re.version in eq.system.properties!; exit 1)"
+    - "[ \"$VERSION\" = \"$VERSION_IN_PROPERTIES\" ] || (echo Update re.version in eq.system.properties!; exit 1)"
     - export BRANCH=${TAG_BRANCH}
     - export CONTEXT=tag
   only:
