--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -232,6 +232,16 @@
                     <include>**/*.html</include>
                     <include>**/*.notes</include>
                 </includes>
+                <excludes>
+                    <exclude>**/eq.system.properties</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>${pom.basedir}/../../src</directory>
+                <includes>
+                    <include>**/eq.system.properties</include>
+                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
 
