--- a/modules/plugins/fbplugin/pom.xml
+++ b/modules/plugins/fbplugin/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
-      <version>1.0.3-SNAPSHOT</version>
+      <version>1.0.3</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
