--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -347,6 +347,7 @@
                             <target name="copy and rename file">
                                 <copy file="${pom.basedir}/../../eq.sh" tofile="${pom.basedir}/target/RedExpert.sh"/>
                                 <chmod file="${pom.basedir}/target/RedExpert.sh" perm="755"/>
+                                <chmod file="${pom.basedir}/target/createDesktopEntry.sh" perm="755"/>
                             </target>
                         </configuration>
                         <goals>
