--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,7 @@ sources:
     - mv modules/redexpert/target/bin "${DIST}"
     - mv modules/redexpert/target/config "${DIST}"
     - mv modules/redexpert/target/lib "${DIST}"
-    - cp license/ "${DIST}"
+    - cp -r license/ "${DIST}"
     - cp guide/RedExpert_Guide-ru.pdf "${DIST}"/guide/
     - mv modules/redexpert/target/createDesktopEntry.sh "${DIST}"
     - mv modules/redexpert/target/LICENSE.txt "${DIST}"
@@ -144,7 +144,7 @@ build:linux:x86:
     - $VERSION = (get-content .ci\version -Raw).trim()
     - unzip -q dist-src\RedExpert-$VERSION-src.zip
     - mkdir ${DIST}
-    - mkdir "${DIST}"/guide/
+    - mkdir ${DIST}/guide/
   script:
     - cd ${CI_PROJECT_DIR}\RedExpert-$VERSION
     - powershell -ExecutionPolicy ByPass -file ci\build_native.ps1
@@ -152,7 +152,7 @@ build:linux:x86:
     - mv modules/redexpert/target/bin "${DIST}"
     - mv modules/redexpert/target/config "${DIST}"
     - mv modules/redexpert/target/lib "${DIST}"
-    - cp license/ "${DIST}"
+    - cp -r license/ "${DIST}"
     - cp guide/RedExpert_Guide-ru.pdf "${DIST}"/guide/
     - mv modules/redexpert/target/createDesktopEntry.sh "${DIST}"
     - mv modules/redexpert/target/LICENSE.txt "${DIST}"
