--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,7 +153,7 @@ build:linux:x86:
     - mv modules/redexpert/target/config "${DIST}"
     - mv modules/redexpert/target/lib "${DIST}"
     - cp -r license/ "${DIST}"
-    - cp guide/RedExpert_Guide-ru.pdf "${DIST}"/guide/
+    - cp guide/RedExpert_Guide-ru.pdf ${DIST}/guide/
     - mv modules/redexpert/target/createDesktopEntry.sh "${DIST}"
     - mv modules/redexpert/target/LICENSE.txt "${DIST}"
     - mv modules/redexpert/target/red_expert.ico "${DIST}"
