--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,7 +117,8 @@ sources:
     - mv modules/redexpert/target/red_expert.ico "${DIST}"
     - mv modules/redexpert/target/red_expert.png "${DIST}"
     - mv modules/redexpert/target/redexpert.desktop "${DIST}"
-    - mv modules/redexpert/target/RedExpert.jar "${DIST}" 
+    - mv modules/redexpert/target/RedExpert.jar "${DIST}"
+    - ./ci/build_installer.sh
 
 build:linux:x86_64:
   <<: *build_linux_template
@@ -125,6 +126,7 @@ build:linux:x86_64:
   variables:
     DIST: ${CI_PROJECT_DIR}/dist/linux-x86_64
     JAVA_HOME: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.x86_64/
+    ARCH: x86_64
     <<: *build_linux_template_variables
 
 build:linux:x86:
@@ -133,6 +135,7 @@ build:linux:x86:
   variables:
     DIST: ${CI_PROJECT_DIR}/dist/linux-x86
     JAVA_HOME: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-3.b13.el6_10.i386/
+    ARCH: x86
     <<: *build_linux_template_variables
 
 .build_windows_template: &build_windows_template
@@ -144,6 +147,7 @@ build:linux:x86:
     JAVA_HOME: c:\Program Files\Java\jdk8
   before_script:
     - $VERSION = (get-content .ci\version -Raw).trim()
+    - $env:RE_VERSION = $VERSION
     - unzip -q dist-src\RedExpert-$VERSION-src.zip
     - mkdir ${DIST}
     - mkdir ${DIST}/guide/
@@ -161,7 +165,8 @@ build:linux:x86:
     - mv modules/redexpert/target/red_expert.ico "${DIST}"
     - mv modules/redexpert/target/red_expert.png "${DIST}"
     - mv modules/redexpert/target/redexpert.desktop "${DIST}"
-    - mv modules/redexpert/target/RedExpert.jar "${DIST}" 
+    - mv modules/redexpert/target/RedExpert.jar "${DIST}"
+    - powershell -ExecutionPolicy ByPass -file ci\build_installer.ps1
 
 build:windows:x86_64:
   <<: *build_template
