See #36850 1.double-click to connect default 2.canceled renaming database if double-click to connect is active

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -166,7 +166,7 @@ divider.location.east=-1
 # ---------------------------
 browser.max.records=10000
 browser.catalog.schema.defaults.only=false
-browser.double-click.to.connect=false
+browser.double-click.to.connect=true
 browser.always.show.table.editable.label=true
 browser.query.row.count=false
 # ------------------------------
