See #35490 envPath with path to bitrock moved to gitlab-ci.yml
(cherry picked from commit df2c0adf5848f3ad30d26edc339a116bcaa38ad0)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,6 +148,7 @@ build:linux:x86:
   before_script:
     - $VERSION = (get-content .ci\version -Raw).trim()
     - $env:RE_VERSION = $VERSION
+    - $env:Path="c:\Program Files (x86)\BitRock InstallBuilder Enterprise 17.10.0\bin;" + $env:Path
     - unzip -q dist-src\RedExpert-$VERSION-src.zip
     - mkdir ${DIST}
     - mkdir ${DIST}/guide/
