See #37422 added option hiding system objects
(cherry picked from commit d68abe9c8420689c90250090180b41bb0f847e32)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -167,6 +167,7 @@ browser.catalog.schema.defaults.only=false
 browser.double-click.to.connect=true
 browser.always.show.table.editable.label=true
 browser.query.row.count=false
+browser.show.system.objects=false
 # ------------------------------
 # Connection Options
 # ------------------------------
