--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -170,6 +170,7 @@ browser.double-click.to.connect=true
 browser.always.show.table.editable.label=true
 browser.query.row.count=false
 browser.show.system.objects=false
+browser.search.in.columns=false
 # ------------------------------
 # Connection Options
 # ------------------------------
