added ability search in columns
(cherry picked from commit 1a0cc0927dda1a744ebd887c760e37955af4d175)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -168,6 +168,7 @@ browser.double-click.to.connect=true
 browser.always.show.table.editable.label=true
 browser.query.row.count=false
 browser.show.system.objects=false
+browser.search.in.columns=false
 # ------------------------------
 # Connection Options
 # ------------------------------
