--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -393,7 +393,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>native2ascii-maven-plugin</artifactId>
-                <version>1.0-beta-1</version>
+                <version>2.0.1</version>
                 <configuration>
                     <dest>${project.build.directory}</dest>
                     <src>${pom.basedir}/../../src</src>
@@ -402,7 +402,7 @@
                     <execution>
                         <id>native2ascii-utf8</id>
                         <goals>
-                            <goal>native2ascii</goal>
+                            <goal>resources</goal>
                         </goals>
                         <configuration>
                             <encoding>UTF8</encoding>
