--- a/modules/plugins/trace-parser/pom.xml
+++ b/modules/plugins/trace-parser/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.executequery</groupId>
         <artifactId>RedExpert-parent</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
 
