--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -206,9 +206,9 @@ general.save.prompt=false
 general.line.separator=0
 releasehub=false
 reddatabase.token=
-reddatabase.check.url=http://reddatabase.ru/api/website/updates/?project=redexpert
-reddatabase.check.rc.url=http://reddatabase.ru/api/website/updates/?project=redexpert&showrc=True
-reddatabase.get-token.url=http://reddatabase.ru/api-token-auth/
+reddatabase.check.url=https://reddatabase.ru/api/website/updates/?project=redexpert
+reddatabase.check.rc.url=https://reddatabase.ru/api/website/updates/?project=redexpert&showrc=True
+reddatabase.get-token.url=https://reddatabase.ru/api-token-auth/
 #Необходимо заполнить эти данные прежде чем выкладывать на сайт.
 reddatabase.filename=bin/RedExpert-
-reddatabase.get-files.url=http://www.reddatabase.ru/api/website/files/?project=redexpert&version=
+reddatabase.get-files.url=https://www.reddatabase.ru/api/website/files/?project=redexpert&version=
