--- a/modules/plugins/fbplugin/pom.xml
+++ b/modules/plugins/fbplugin/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
