added tag "SNAPSHOT" to version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ prepare:snapshot:
     - mkdir .ci
     - VERSION=$(date +"%Y.%m")
     - BUILDNO=$(relmanager_client genbuildno ${RELEASE_HUB_PROJECT} ${VERSION}-SNAPSHOT)
-    - export VERSION=${VERSION}.${BUILDNO}
+    - export VERSION=${VERSION}-SNAPSHOT.${BUILDNO}
     - export BRANCH=${CI_COMMIT_REF_NAME}
     - export CONTEXT=commit
   except:
