fixed updating from reddatabase.ru

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -212,6 +212,6 @@ reddatabase.check.rc.url=https://reddatabase.ru/api/website/updates/?project=red
 reddatabase.get-token.url=https://reddatabase.ru/api-token-auth/
 #Необходимо заполнить эти данные прежде чем выкладывать на сайт.
 reddatabase.filename=bin/RedExpert-
-reddatabase.get-files.url=https://www.reddatabase.ru/api/website/files/?project=redexpert&version=
+reddatabase.get-files.url=https://reddatabase.ru/api/website/files/?project=redexpert&version=
 console.font.name=
 console.font.size=10
