Added saving paths to Java in the user directory of the RedExpert settings(on Windows)

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -288,6 +288,7 @@
                                     <includes>
                                         <include>**/fbtrace.conf</include>
                                         <include>**/gss.login.conf</include>
+                                        <include>**/redexpert_config.ini</include>
                                         <include>red_expert.png</include>
                                         <include>red_expert.ico</include>
                                         <include>LICENSE.txt</include>
