improved Linux launcher: 1.added the ability to choose the path to java or   automatic download java

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,6 +104,7 @@ sources:
     - ./ci/build_native.sh
     - ./ci/build_jar.sh
     - mkdir -p "${DIST}"
+    - mv native/RedExpertNativeLauncher/resources "${DIST}"
     - mkdir "${DIST}"/guide/
     - chmod +x modules/redexpert/target/bin/*
     - mv modules/redexpert/target/bin "${DIST}"
