--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2020.08-SNAPSHOT</version>
+    <version>2020.10</version>
     <modules>
 		<module>modules/plugins/fbplugin</module>
         <module>modules/plugins/fbplugin-impl</module>
