Add christmas melody

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -106,6 +106,7 @@ editor.tab.spaces=2
 editor.connection.commit=false
 editor.open.count=5
 editor.stop.on.error=true
+editor.christmas.melody=true
 
 # ---------------------------------
 # Results Panel Options
