fix default properties

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -11,7 +11,7 @@
 startup.window.maximized=false;
 startup.display.splash=true
 startup.display.openwindow=1
-startup.display.lookandfeel=NATIVE
+startup.display.lookandfeel=EXECUTE_QUERY_GRADIENT
 startup.connection.name=noconn
 startup.version.check=true
 startup.unstableversions.load=false
@@ -149,7 +149,7 @@ system.display.connections=true
 system.display.keywords=false
 system.display.drivers=true
 system.display.statusbar=true
-system.display.console=true
+system.display.console=false
 system.display.navigator=true
 system.display.systemprops=true
 system.display.state-codes=false
