--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -38,12 +38,17 @@
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-jdk18</artifactId>
-      <version>3.0.15</version>
+      <version>4.0.1</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-      <version>3.0.15</version>
+      <version>4.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>ru.red-soft.jdbc</groupId>
+      <artifactId>fbclient</artifactId>
+      <version>4.0.1</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -91,16 +96,39 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
+                  <version>3.0.15</version>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
-                  <destFileName>jaybird-full.jar</destFileName>
+                  <destFileName>jaybird-3.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-jdk18</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>jaybird-4.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-cryptoapi-jdk18</artifactId>
+                  <version>3.0.15</version>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>jaybird-cryptoapi-3.jar</destFileName>
                 </artifactItem>
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
-                  <destFileName>jaybird-cryptoapi.jar</destFileName>
+                  <destFileName>jaybird-cryptoapi-4.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>fbclient</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>fbclient-4.jar</destFileName>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -115,16 +143,39 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
+                  <version>3.0.15</version>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
-                  <destFileName>jaybird-full.jar</destFileName>
+                  <destFileName>jaybird-3.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-jdk18</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../redexpert/target/lib</outputDirectory>
+                  <destFileName>jaybird-4.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-cryptoapi-jdk18</artifactId>
+                  <version>3.0.15</version>
+                  <type>jar</type>
+                  <outputDirectory>../../redexpert/target/lib</outputDirectory>
+                  <destFileName>jaybird-cryptoapi-3.jar</destFileName>
                 </artifactItem>
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
-                  <destFileName>jaybird-cryptoapi.jar</destFileName>
+                  <destFileName>jaybird-cryptoapi-4.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>fbclient</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../redexpert/target/lib</outputDirectory>
+                  <destFileName>fbclient-4.jar</destFileName>
                 </artifactItem>
               </artifactItems>
             </configuration>
