--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -172,13 +172,13 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.5.0</version>
+            <version>5.5.0</version>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>4.5.0</version>
+            <version>5.5.0</version>
         </dependency>
 
 
@@ -253,6 +253,7 @@
                                     <directory>${pom.basedir}/../../lib</directory>
                                     <includes>
                                         <include>**/fbplugin.jar</include>
+                                        <include>**/fbclient.jar</include>
                                         <include>**/liquibase-3.5.6-SNAPSHOT.jar</include>
                                     </includes>
                                 </resource>
