default sort by significance
(cherry picked from commit 8f5f737294dd32ac449192391e1546422aa1e144)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -59,7 +59,7 @@ sqlsyntax.style.braces.error=0
 treeconnection.font.name=
 treeconnection.font.size=12
 treeconnection.row.height=20
-treeconnection.alphabet.sorting=true
+treeconnection.alphabet.sorting=false
 # ----------------------------
 # Desktop Settings
 # ----------------------------
