--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -8,7 +8,7 @@
 
   <parent>
     <groupId>org.executequery</groupId>
-    <artifactId>RedXpert-parent</artifactId>
+    <artifactId>RedExpert-parent</artifactId>
     <version>2021.03</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
@@ -16,12 +16,16 @@
   <repositories>
     <repository>
       <id>maven-central</id>
-      <url>https://repo1.maven.org/maven2</url>
+        <url>http://repo1.maven.org/maven2</url>
     </repository>
-    <repository>
-      <id>nexus-red-soft-ru-jaybird</id>
-      <url>http://nexus.red-soft.ru/repository/jaybird</url>
-    </repository>
+      <repository>
+          <snapshots>
+              <enabled>false</enabled>
+          </snapshots>
+          <id>bintray-red-soft-ru-releases</id>
+          <name>bintray</name>
+          <url>https://dl.bintray.com/red-soft-ru/releases</url>
+      </repository>
   </repositories>
 
   <!-- project dependencies -->
@@ -34,12 +38,12 @@
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-jdk18</artifactId>
-      <version>3.0.20</version>
+        <version>3.0.15</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-      <version>3.0.20</version>
+        <version>3.0.15</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
