--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.executequery</groupId>
-    <artifactId>RedXpert-parent</artifactId>
+    <artifactId>RedExpert-parent</artifactId>
     <packaging>pom</packaging>
     <version>2021.03</version>
     <modules>
